Update work exp

--- a/index.html
+++ b/index.html
@@ -86,8 +86,21 @@
 											<li>Developing Linux device drivers, kernel modules.</li>
 										</ul>
 										<p>Toolchain: Jira, Bitbucket, make, C, Bash, Docker, OpenWRT.</p>
+									</div>
+								</div><!--//item-->
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Embedded BaseCamp</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | May 2017 – Aug 2017</div>
 
 									</div>
+									<div class="item-content">
+										<ul class="resume-list">
+											<li>Developing and testing new features for Wireless PMP product based on WiFi 802.11ac solution;</li>
+											<li>Analyzing and resolving bugs;</li>
+											<li>Developing Linux device drivers, kernel modules.</li>
+										</ul>
+										<p>Toolchain: Jira, Bitbucket, make, C, Bash, Docker, OpenWRT.</p>									</div>
 								</div><!--//item-->
 								
 							</section><!--//work-section-->
