--- a/index.html
+++ b/index.html
@@ -140,24 +140,10 @@
 											</li>
 										</ul>
 									</section><!--//education-section-->
-									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
-										<ul class="list-unstyled resume-awards-list">
-											<li class="mb-3">
-												<div class="font-weight-bold">Award Lorem Ipsum</div>
-												<div class="text-muted">Microsoft lorem ipsum (2019)</div>
-											</li>
-											<li>
-												<div class="font-weight-bold">Award Donec Sodales</div>
-												<div class="text-muted">Oracle Aenean (2017)</div>
-											</li>
-										</ul>
-									</section><!--//education-section-->
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-2">English <span class="text-muted">(Native)</span></li>
-											<li>Spanish <span class="text-muted">(Professional)</span></li>
+											<li class="mb-2">English <span class="text-muted">(Upper-Intermediate)</span></li>
 										</ul>
 									</section><!--//certificates-section-->
 									<section class="skills-section py-3">
