Upd basecamp exp

--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Developing and testing new features for Wireless PMP product based on WiFi 802.11ac solution;</li>
-											<li>Analyzing and resolving bugs;</li>
-											<li>Developing Linux device drivers, kernel modules.</li>
+											<li>Embedded C programming;</li>
+											<li>AVR microcontrollers programming.</li>
+											<li>Bare-metal programming.</li>
 										</ul>
-										<p>Toolchain: Jira, Bitbucket, make, C, Bash, Docker, OpenWRT.</p>									</div>
+										<p>Toolchain: ATmega2560, make, C, avrdude.</p>
+									</div>
 								</div><!--//item-->
 								
 							</section><!--//work-section-->
