--- a/index.html
+++ b/index.html
@@ -111,16 +111,12 @@
 							<section class="skills-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Skills</h3>
 								<div class="item">
-									<h4 class="item-title">Technical</h4>
+									<h4 class="item-title">Programming languages</h4>
 									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">JavaScript/Angular/React/Vue</li>
-										<li class="mb-2">Python/Ruby/PHP<li>
-											<li class="mb-2">Node.js/ASP.NET</li>
-											<li class="mb-2">PostgreSQL/MySQL</li>
-											<li class="mb-2">Object-oriented design</li>
-											<li class="mb-2">Design and implement database structures</li>
-											<li>Lead and deliver complex software systems</li>
-										</ul>
+										<li class="mb-2">C++</li>
+										<li class="mb-2">C<li>
+										<li class="mb-2">Python</li>
+									</ul>
 									</div><!--//item-->
 									<div class="item">
 										<h4 class="item-title">Professional</h4>
