--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li class="mb-2">Climbing</li>
-											<li class="mb-2">Snowboarding</li>
-											<li class="mb-2">Photography</li>
-											<li>Travelling</li>
+											<li class="mb-2">Sport</li>
+											<li class="mb-2">Reading</li>
+											<li class="mb-2">Video Games</li>
+											<li class="mb-2">Travelling</li>
 										</ul>
 									</section><!--//certificates-section-->
 									
