--- a/index.html
+++ b/index.html
@@ -113,20 +113,15 @@
 								<div class="item">
 									<h4 class="item-title">Programming languages</h4>
 									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">C++</li>
-										<li class="mb-2">C<li>
-										<li class="mb-2">Python</li>
+										<li class="mb-2">C, C++, Python</li>
 									</ul>
-									</div><!--//item-->
-									<div class="item">
-										<h4 class="item-title">Professional</h4>
-										<ul class="list-unstyled resume-skills-list">
-											<li class="mb-2">Effective communication</li>
-											<li class="mb-2">Team player<li>
-												<li class="mb-2">Strong problem solver</li>
-												<li>Good time management</li>
-											</ul>
-										</div><!--//item-->
+								</div><!--//item-->
+								<div class="item">
+									<h4 class="item-title">OS</h4>
+									<ul class="list-unstyled resume-skills-list">
+										<li class="mb-2">QNX, OpenWRT, Ubuntu</li>
+									</ul>
+								</div><!--//item-->
 									</section><!--//skills-section-->
 									<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
