--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<div class="item-content">
 										<ul class="resume-list">
 											<li>Development of Automotive Systems for EU OEM;</li>
-											<li>R&D;</li>
+											<li>R&ampD;</li>
 											<li>PoC's.</li>
 										</ul>
 										<p>Toolchain: Jira, Gerrit, CMake, C, C++, Python, Docker, QNX.</p>
@@ -90,7 +90,7 @@
 									<div class="item-content">
 										<ul class="resume-list">
 											<li>Embedded C programming;</li>
-											<li>AVR microcontrollers programming.</li>
+											<li>AVR microcontrollers programming;</li>
 											<li>Bare-metal programming.</li>
 										</ul>
 										<p>Toolchain: ATmega2560, make, C, avrdude.</p>
