--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
 										<li class="mb-2">QNX, OpenWRT, Ubuntu</li>
 									</ul>
 								</div><!--//item-->
+								<div class="item">
+									<h4 class="item-title">Testing</h4>
+									<ul class="list-unstyled resume-skills-list">
+										<li class="mb-2">GTest, PyTest, Robot Framework, CI, Jenkins</li>
+									</ul>
+								</div><!--//item-->
+								<div class="item">
+									<h4 class="item-title">Other</h4>
+									<ul class="list-unstyled resume-skills-list">
+										<li class="mb-2">Linux Kernel, Linux Device Drivers, Embedded Systems, Docker, Scrum</li>
+									</ul>
+								</div><!--//item-->
 							</section><!--//skills-section-->
 							<section class="education-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
