--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Automotive Software Engineer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Present</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Present |<br> 1 yr 4 mos</div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
@@ -71,7 +71,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Embedded/Linux Kernel Sofware Engineer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Aug 2017 – May 2018</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Aug 2017 – May 2018 |<br> 10 mos</div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
@@ -85,7 +85,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Embedded BaseCamp</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | May 2017 – Aug 2017</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | May 2017 – Aug 2017 |<br> 4 mos</div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
