--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<div class="item-content">
 										<ul class="resume-list">
 											<li>Development of Automotive Systems for EU OEM;</li>
-											<li>R&ampD;</li>
+											<li>R&amp;D;</li>
 											<li>PoC's.</li>
 										</ul>
 										<p>Toolchain: Jira, Gerrit, CMake, C, C++, Python, Docker, QNX.</p>
