--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									</ul>
 								</div><!--//item-->
 								<div class="item">
-									<h4 class="item-title">Testing</h4>
+									<h4 class="item-title">CI/CD</h4>
 									<ul class="list-unstyled resume-skills-list">
 										<li class="mb-2">GTest, PyTest, Robot Framework, CI, Jenkins</li>
 									</ul>
