Update current experience

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Vitalii Vereta</h2>
-							<div class="resume-tagline mb-3 mb-md-0">C/C++ Software Engineer</div>
+							<div class="resume-tagline mb-3 mb-md-0">C/C++/Python Software Engineer</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -64,10 +64,11 @@
 									<div class="item-content">
 										<ul class="resume-list">
 											<li>Development of Automotive Systems for EU OEM;</li>
-											<li>R&amp;D;</li>
-											<li>PoC's.</li>
+											<li>Design and implementation safety-related and performance-critical systems;</li>
+											<li>Writing software requirements, architecture and design documents;</li>
+											<li>R&amp;D.</li>
 										</ul>
-										<p>Toolchain: Jira, Gerrit, CMake, C, C++, Python, Docker, QNX.</p>
+										<p>Toolchain: C++, C, Python, CMake, Docker, QNX, Jira, Gerrit.</p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
@@ -81,7 +82,7 @@
 											<li>Analyzing and resolving bugs;</li>
 											<li>Developing Linux device drivers, kernel modules.</li>
 										</ul>
-										<p>Toolchain: Jira, Bitbucket, make, C, Bash, Docker, OpenWRT.</p>
+										<p>Toolchain: C, Bash, make, Docker, OpenWRT, Jira, Bitbucket.</p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
