--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">Embedded Ninja, Unix Jedi and C Superhero. </p>
-							<p class="mb-0">Python hobbyist. </p>
+							<p class="mb-0">Embedded Ninja, Linux Jedi and Cross-functional Superhero.</p>
+							<p class="mb-0">Python hobbyist.</p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -58,7 +58,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Automotive Software Engineer</h4>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer</h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Present<p id="years"></p></div>
 									</div>
 									<div class="item-content">
