--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
 						<div class="media-body text-left">
 							<p class="mb-0">Embedded Ninja, Linux Jedi and Cross-functional Superhero.</p>
-							<p class="mb-0">Python hobbyist.</p>
+							<p class="mb-0">Embedded hobbyist.</p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -58,12 +58,26 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Present<p id="years"></p></div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer & Scrum Master</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jan 2021 - Present<p id="years"></p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Development of Automotive Systems for EU OEM;</li>
+											<li>Development of Autonomous Driving / Advanced Driver Assistance System;</li>
+											<li>Implementation of decision-making models for AD/ADAS use cases;</li>
+											<li>Development of sensor fusion algorithms for the innovative control platform;</li>
+										</ul>
+										<p>Toolchain: C++, C, Python, CMake, Docker, QNX, Jira, Gerrit.</p>
+									</div>
+								</div><!--//item-->
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Jan 2021<p> 2 yr 8 mos</p></div>
+									</div>
+									<div class="item-content">
+										<ul class="resume-list">
+											<li>Development of Automotive Systems (High-performance platform) for EU OEM;</li>
 											<li>Design and implementation safety-related and performance-critical systems;</li>
 											<li>Writing software requirements, architecture and design documents;</li>
 											<li>R&amp;D.</li>
