Add Scm description

--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Development of Autonomous Driving / Advanced Driver Assistance System;</li>
-											<li>Implementation of decision-making models for AD/ADAS use cases;</li>
-											<li>Development of sensor fusion algorithms for the innovative control platform;</li>
+											<li>Development of Autonomous Driving / Advanced Driver Assistance Platform for EU OEM;</li>
+											<li>Ensuring that all Scrum events take place and are positive, productive, and kept within the timebox;</li>
 										</ul>
 										<p>Toolchain: C++, C, Python, CMake, Docker, QNX, Jira, Gerrit.</p>
 									</div>
