--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Vitalii Vereta</title>
+	<title>CV Vitalii Vereta</title>
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,7 +30,7 @@
 					<div class="row align-items-center">
 						<div class="resume-title col-12 col-md-6 col-lg-8 col-xl-9">
 							<h2 class="resume-name mb-0 text-uppercase">Vitalii Vereta</h2>
-							<div class="resume-tagline mb-3 mb-md-0">C/C++/Python Software Engineer</div>
+							<div class="resume-tagline mb-3 mb-md-0">C++/Python Software Engineer</div>
 						</div><!--//resume-title-->
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
@@ -45,8 +45,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">Embedded Ninja, Linux Jedi and Cross-functional Superhero.</p>
-							<p class="mb-0">Embedded hobbyist.</p>
+							<p class="mb-0">Cross-functional software engineer.</p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -58,25 +57,26 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer & Scrum Master</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jan 2021 - Present<p id="years"></p></div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Firmware Software Engineer (C++/Python)</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Petcube | Jan 2022 - Present<p id="years"></p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Development of Autonomous Driving / Advanced Driver Assistance Platform for EU OEM;</li>
-											<li>Ensuring that all Scrum events take place and are positive, productive, and kept within the timebox;</li>
+											<li>Improvement of the firmware for the video-streaming devices based on Embedded Linux to connect pets to the Internet and them a voice.</li>
 										</ul>
-										<p>Toolchain: C++, C, Python, CMake, Docker, QNX, Jira, Gerrit.</p>
+										<p>Toolchain: C++, C, Python, Docker, QT.</p>
 									</div>
 								</div><!--//item-->
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Jan 2021<p> 2 yr 8 mos</p></div>
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer & Scrum Master</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Jun 2018 - Jan 2022<p> 3 yr 8 mos</p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
+											<li>Development of Autonomous Driving / Advanced Driver Assistance Platform for EU OEM;</li>
 											<li>Development of Automotive Systems (High-performance platform) for EU OEM;</li>
+											<li>Ensuring that all Scrum events take place and are positive, productive, and kept within the timebox;</li>
 											<li>Design and implementation safety-related and performance-critical systems;</li>
 											<li>Writing software requirements, architecture and design documents;</li>
 											<li>R&amp;D.</li>
@@ -87,7 +87,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Embedded/Linux Kernel Sofware Engineer</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Aug 2017 – May 2018<p> 10 mos</p></div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | Aug 2017 - May 2018<p> 10 mos</p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
@@ -101,7 +101,7 @@
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Embedded BaseCamp</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | May 2017 – Aug 2017<p> 4 mos</p></div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">GlobalLogic | May 2017 - Aug 2017<p> 4 mos</p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
@@ -184,7 +184,7 @@
 			</footer>
 	</div><!--//main-wrapper-->
 
-	<script>window.onload = get_duration();</script>
+	<script>window.onload = get_duration(2021, 12, 1);</script>
 
 </body>
 </html>
