--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 						<div class="resume-contact col-12 col-md-6 col-lg-4 col-xl-3">
 							<ul class="list-unstyled mb-0">
 								<li class="mb-2"><i class="fas fa-envelope-square fa-fw fa-lg mr-2"></i><a class="resume-link" href="mailto:#">vereta.vitalii@gmail.com</a></li>
+								<li class="mb-0"><i class="fab fa-telegram fa-fw fa-lg mr-2"></i>@vvereta</li>
 								<li class="mb-0"><i class="fas fa-map-marker-alt fa-fw fa-lg mr-2"></i>Kyiv</li>
 							</ul>
 						</div><!--//resume-contact-->
