Add new position

--- a/index.html
+++ b/index.html
@@ -58,8 +58,22 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Work Experiences</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">C++/Python Software Engineer</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Skyeton | Mar 2024 - Present<p id="years"></p></div>
+									</div>
+									<div class="item-content">
+										<ul class="resume-list">
+											<li>Development and enhancement of flight control software for UAV systems;</li>
+											<li>Working in a cross-functional team to integrate new features and improve performance;</li>
+											<li>Contributing to the development of safety-critical systems in accordance with industry standards.</li>
+										</ul>
+										<p>Toolchain: C++, Python, Ardupilot, MAVLink.</p>
+									</div>
+								</div>
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Firmware Software Engineer (C++/Python)</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Petcube | Jan 2022 - Present<p id="years"></p></div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-left text-md-right">Petcube | Jan 2022 - Mar 2024<p> 2 yr 3 mos </p></div>
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
@@ -185,7 +199,7 @@
 			</footer>
 	</div><!--//main-wrapper-->
 
-	<script>window.onload = get_duration(2021, 12, 1);</script>
+	<script>window.onload = get_duration(2024, 2, 1);</script>
 
 </body>
 </html>
