--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<div class="media flex-column flex-md-row align-items-center">
 						<img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="assets/images/resume-profile.png" alt="image">
 						<div class="media-body text-left">
-							<p class="mb-0">Cross-functional software engineer.</p>
+							<p class="mb-0">🚀 Software Engineer specializing in UAV systems for military and defense applications.</p>
 						</div><!--//media-body-->
 					</div>
 				</div><!--//resume-intro-->
@@ -63,11 +63,12 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Development and enhancement of flight control software for UAV systems;</li>
-											<li>Working in a cross-functional team to integrate new features and improve performance;</li>
-											<li>Contributing to the development of safety-critical systems in accordance with industry standards.</li>
+											<li>Improving firmware for flight controllers in state-of-the-art Unmanned Aerial Vehicles (UAVs);</li>
+											<li>Enhancing the navigation system (AHRS, EKF, DCM, and GPS) to improve positioning accuracy and ensure autonomous flight stability for defense applications;</li>
+											<li>Fixing and refining Mission Protocol, ensuring reliable communication between the UAV and ground control for seamless mission planning and execution;</li>
+											<li>Writing automated tests and running virtual UAVs in SITL (Software-in-the-Loop) to validate system performance and reliability.</li>
 										</ul>
-										<p>Toolchain: C++, Python, Ardupilot, MAVLink.</p>
+										<p>Toolchain: C++, Python, Ardupilot, MAVLink, SITL, MAVProxy.</p>
 									</div>
 								</div>
 								<div class="item mb-3">
@@ -77,7 +78,7 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Improvement of the firmware for the video-streaming devices based on Embedded Linux to connect pets to the Internet and them a voice.</li>
+											<li>Improvement of the firmware for video-streaming devices based on Embedded Linux to connect pets to the Internet and give them a voice.</li>
 										</ul>
 										<p>Toolchain: C++, C, Python, Docker, QT.</p>
 									</div>
@@ -89,12 +90,10 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Development of Autonomous Driving / Advanced Driver Assistance Platform for EU OEM;</li>
-											<li>Development of Automotive Systems (High-performance platform) for EU OEM;</li>
-											<li>Ensuring that all Scrum events take place and are positive, productive, and kept within the timebox;</li>
-											<li>Design and implementation safety-related and performance-critical systems;</li>
-											<li>Writing software requirements, architecture and design documents;</li>
-											<li>R&amp;D.</li>
+											<li>Developed Autonomous Driving / Advanced Driver Assistance Systems (ADAS) for EU OEM;</li>
+											<li>Developed Automotive Systems (High-performance platform) for EU OEM;</li>
+											<li>Designed and implemented safety-related and performance-critical systems;</li>
+											<li>Conducted R&D on automotive software solutions.</li>
 										</ul>
 										<p>Toolchain: C++, C, Python, CMake, Docker, QNX, Jira, Gerrit.</p>
 									</div>
@@ -106,9 +105,8 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Developing and testing new features for Wireless PMP product based on WiFi 802.11ac solution;</li>
-											<li>Analyzing and resolving bugs;</li>
-											<li>Developing Linux device drivers, kernel modules.</li>
+											<li>Developed and tested new features for Wireless PMP products based on WiFi 802.11ac;</li>
+											<li>Developed Linux device drivers and kernel modules.</li>
 										</ul>
 										<p>Toolchain: C, Bash, make, Docker, OpenWRT, Jira, Bitbucket.</p>
 									</div>
@@ -120,9 +118,8 @@
 									</div>
 									<div class="item-content">
 										<ul class="resume-list">
-											<li>Embedded C programming;</li>
-											<li>AVR microcontrollers programming;</li>
-											<li>Bare-metal programming.</li>
+											<li>Programmed Embedded C for AVR microcontrollers;</li>
+											<li>Developed bare-metal applications.</li>
 										</ul>
 										<p>Toolchain: ATmega2560, make, C, avrdude.</p>
 									</div>
@@ -147,7 +144,7 @@
 								<div class="item">
 									<h4 class="item-title">Testing</h4>
 									<ul class="list-unstyled resume-skills-list">
-										<li class="mb-2">GTest, PyTest, Robot Framework</li>
+										<li class="mb-2">GTest, PyTest, Robot Framework, SITL</li>
 									</ul>
 								</div><!--//item-->
 								<div class="item">
@@ -162,7 +159,7 @@
 								<ul class="list-unstyled resume-education-list">
 									<li class="mb-3">
 										<div class="resume-degree font-weight-bold">BSc in Computer Science</div>
-										<div class="resume-degree-org text-muted">National Technical University of Ukraine 'Kyiv Polytechnic Institute'​</div>
+										<div class="resume-degree-org text-muted">National Technical University of Ukraine 'Kyiv Polytechnic Institute'</div>
 									</li>
 								</ul>
 							</section><!--//education-section-->
